<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ihm.sloz.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.ihm.sloz.buscar.Buscar"
        android:label="@string/title_buscar"
        tools:layout="@layout/perfil" />

    <fragment
        android:id="@+id/navigation_viajes"
        android:name="com.ihm.sloz.viajes.Viajes"
        android:label="@string/title_viajes"
        tools:layout="@layout/viajes" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.ihm.sloz.perfil.Perfil"
        android:label="@string/title_perfil"
        tools:layout="@layout/buscar" />
</navigation>
