<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sloz_grey"
    tools:context=".inicio.CrearCuenta">

    <TextView
        android:id="@+id/tienes_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="@color/light_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_button"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/link_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/sloz_azul"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/tienes_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/crear_button"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/o_inicia_con_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/o_crea"
        android:textColor="@color/silver"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/facebook_login"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:background="@drawable/comp_round_btn"
        android:drawableStart="@drawable/ic_facebook"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/google_login"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:background="@drawable/comp_round_btn"
        android:drawableStart="@drawable/ic_google"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <ImageView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <Button
        android:id="@+id/crear_button"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/comp_round_btn"
        android:text="@string/crea_cuenta"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/crear_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/crea_cuenta"
        android:textColor="@color/light_black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="322dp"
        android:layout_height="80dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.058"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFB400">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_input"
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Email"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/cont"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/apellidos_input"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Email"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_input"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Email"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o_inicia_con_correo"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Email"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos_input"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>